// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display alert message if editing an EPPI user 1`] = `
<p>
  This user may have access to EPPI R5 - only a professional email address can be associated to this profile. Please verify via the EPPI user admin page before changing the email address.
</p>
`;

exports[`should match the snapshot after data has been loaded 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/users/1"
        >
          Kristin Patrick
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/users/1",
        "name": "Kristin Patrick"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
    data-qa-sel="page-header-edit-user"
  >
    <h1
      class="page-header__heading "
    >
      <span
        class="page-header__pre-heading"
      >
        Personal details for
      </span>
      Kristin Patrick
    </h1>
  </div>
  <div
    class="grid"
  >
    <div
      data-g="12 md:6 lg:4"
    >
      <form
        novalidate=""
      >
        <div
          class="input"
        >
          <label
            class="input__label"
            for="emailAddress"
          >
            Email address
          </label>
          <input
            autocomplete="off"
            class="input__input"
            data-qa-sel="email-input-edit-user"
            id="emailAddress"
            name="emailAddress"
            required=""
            type="email"
            value="kristin.patrick@example.com"
          />
        </div>
        <div
          class="input"
        >
          <label
            class="input__label"
            for="firstName"
          >
            First name
          </label>
          <input
            autocomplete="off"
            class="input__input"
            data-qa-sel="firstname-input-edit-user"
            id="firstName"
            maxlength="100"
            minlength="2"
            name="firstName"
            pattern="^((?![<>]).)*$"
            required=""
            type="text"
            value="Kristin"
          />
        </div>
        <div
          class="input"
        >
          <label
            class="input__label"
            for="lastName"
          >
            Last name
          </label>
          <input
            autocomplete="off"
            class="input__input"
            data-qa-sel="lastname-input-edit-user"
            id="lastName"
            maxlength="100"
            minlength="2"
            name="lastName"
            pattern="^((?![<>]).)*$"
            required=""
            type="text"
            value="Patrick"
          />
        </div>
        <div
          class="form-group-container form-group-container--no-border"
        >
          <fieldset
            class="form-group"
          >
            <legend
              class="form-group__legend"
            >
              Audience insight community membership
            </legend>
            <div
              class="radio"
            >
              <input
                checked=""
                class="radio__input"
                data-qa-sel="optIn-radio-edit-user"
                id="audienceInsight_optIn"
                name="audienceInsight"
                type="radio"
              />
              <label
                class="radio__label"
                for="audienceInsight_optIn"
              >
                Opt in
              </label>
            </div>
            <div
              class="radio"
            >
              <input
                class="radio__input"
                data-qa-sel="optOut-radio-edit-user"
                id="audienceInsight_optOut"
                name="audienceInsight"
                type="radio"
              />
              <label
                class="radio__label"
                for="audienceInsight_optOut"
              >
                Opt out
              </label>
            </div>
          </fieldset>
          <button
            class="btn btn--cta"
            data-qa-sel="save-button-edit-user"
            type="submit"
          >
            Save profile
          </button>
          <a
            class="btn btn--secondary"
            href="/users/1"
          >
            Cancel
          </a>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`should show error message when useFetch get call returns 401 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/users/1"
        >
          Error
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/users/1",
        "name": "Error"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;

exports[`should show error message when useFetch get call returns 500 error 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/users/1"
        >
          Error
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/users/1",
        "name": "Error"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;

exports[`should show error message when useFetch patch fails 1`] = `
<div>
  <nav
    aria-label="Breadcrumbs"
    role="navigation"
  >
    <ol
      class="breadcrumbs"
    >
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-administration-link"
          href="/"
        >
          Administration
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          data-qa-sel="breadcrumb-user-link"
          href="/users"
        >
          Users
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <a
          href="/users/1"
        >
          Error
        </a>
      </li>
      <li
        class="breadcrumbs__crumb"
      >
        <span>
          Edit user
        </span>
      </li>
    </ol>
  </nav>
  <script
    type="application/ld+json"
  >
    {
  "@context": "http://schema.org",
  "@type": "BreadcrumbList",
  "itemListElement": [
    {
      "@type": "ListItem",
      "position": 1,
      "item": {
        "@id": "/",
        "name": "Administration"
      }
    },
    {
      "@type": "ListItem",
      "position": 2,
      "item": {
        "@id": "/users",
        "name": "Users"
      }
    },
    {
      "@type": "ListItem",
      "position": 3,
      "item": {
        "@id": "/users/1",
        "name": "Error"
      }
    },
    {
      "@type": "ListItem",
      "position": 4,
      "item": {
        "name": "Edit user"
      }
    }
  ]
}
  </script>
  <div
    class="page-header"
  >
    <h1
      class="page-header__heading "
    >
      Error
    </h1>
  </div>
  <div
    class="alert alert--error"
    role="alert"
  >
    <h2>
      Whoops
    </h2>
    <p>
      Sorry, there's been an error!
    </p>
  </div>
</div>
`;
